# CML_AMP_RAG_Studio

./: .env.example  .gitignore  .project-metadata.yaml  AMP_Rag_Studio_Notice.txt  README.md  RELEASING.md  catalog-entry-dev.yaml  catalog-entry.yaml  devenv.nix  docker-compose.yaml  local-dev.sh
llm-service/: .dockerignore  .gitignore  Dockerfile  get_openapi_schema.py  pyproject.toml  run_tests.sh
llm-service/app/: config.py  exceptions.py  main.py  rag_types.py  requirements.txt  types.py
llm-service/app/ai/indexing/: base.py  embedding_indexer.py  index.py  summary_indexer.py
llm-service/app/ai/indexing/readers/: __init__.py  base_reader.py  csv.py  docx.py  json.py  nop.py  pdf.py  pptx.py  simple_file.py
llm-service/app/ai/vector_stores/: qdrant.py  vector_store.py
llm-service/app/routers/: __init__.py
llm-service/app/routers/index/: __init__.py
llm-service/app/routers/index/amp_update/: __init__.py
llm-service/app/routers/index/data_source/: __init__.py
llm-service/app/routers/index/models/: __init__.py
llm-service/app/routers/index/sessions/: __init__.py
llm-service/app/routers/index/workspaces/: __init__.py
llm-service/app/services/: CaiiEmbeddingModel.py  CaiiModel.py  amp_update.py  caii.py  chat.py  chat_store.py  data_sources_metadata_api.py  doc_summaries.py  document_storage.py  evaluators.py  llama_utils.py  llm_completion.py  models.py  noop_models.py  qdrant.py  rag_qdrant_vector_store.py  rag_vector_store.py  s3.py  utils.py  vector_store.py  workspace_store.py
llm-service/app/services/caii/: CaiiEmbeddingModel.py  caii.py  types.py  utils.py
llm-service/app/services/document_storage/: __init__.py  base.py  file_storage.py  s3.py
llm-service/app/services/providers/: __init__.py  openai.py  s3.py
llm-service/app/tests/: README.md  conftest.py
llm-service/app/tests/ai/indexing/: test_csv.py  test_pdf_page_tracker.py
llm-service/app/tests/routers/index/: test_data_source.py  test_doc_summaries.py
llm-service/app/tests/services/: test_chat.py
llm-service/scripts/: get_job_run_status.py  run_refresh_job.py
llm-service/tests/: README.md  conftest.py  requirements.txt
pybackend/: pyproject.toml
pybackend/src/migration/: datastore.py  migrator.py
pybackend/src/migration/sqlite/: 1_cloud_config.down.sql  1_cloud_config.up.sql
pybackend/src/openapi_server/: main.py
pybackend/src/openapi_server/apis/: config_cloud_api.py  config_cloud_api_base.py
pybackend/src/openapi_server/models/: cloud_configuration.py  cloud_configuration_aws.py  cloud_configuration_aws_aws.py  cloud_configuration_aws_aws_type.py  cloud_configuration_aws_instance_profile.py  cloud_configuration_aws_key.py  cloud_configuration_configuration.py  cloud_configuration_create_request.py  cloud_configuration_list.py  cloud_configuration_update_request.py  object.py
pybackend/tests/migration/: test_sqlite.py
ui/: .npmrc  (+11 more)
(+338 files in other folders)
